k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
spec:
  selector:
    app: auth-app-pod
  ports:
    - protocol: TCP
      port: 8124
      targetPort: 8765
  type: ClusterIP
