k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-app-service
spec:
  selector:
    app: helloworld-app-pod
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8888
  type: NodePort
